# udacity-data-eng-aws-redshift-data-warehouse-etl

./: .gitignore  LICENSE  README.md  dwh.cfg.example  etl.py  pyproject.toml  sql_queries.py
notebooks/: analytics_dashboard.ipynb
scripts/: config_helper.py  provision_infra.py
src/redshift_etl/: create_tables.py  etl.py  sql_queries.py
src/redshift_etl/scripts/: config_helper.py  provision_infra.py  teardown_infra.py
src/redshift_etl/sql/: data_quality.py  sql_queries.py
